added two show endpoints inboth controllers
in employee controller a new show endpoint was added to show a single employee and its projects and on the other hand a new show endpoint in project controller was added to show a single project what employee is connected to it and a swagger documentation for the project controller
