# app/Models/Employee.php
@@ -12,15 +12,24 @@ use OpenApi\Annotations as OA;
  *     type="object",
  *     title="Employee",
  *     required={"name","email","phone"},
+ * 
  *     @OA\Property(property="id", type="integer", example=1),
  *     @OA\Property(property="name", type="string", example="Lujine"),
  *     @OA\Property(property="email", type="string", example="lujine@gmail.com"),
  *     @OA\Property(property="phone", type="string", example="+9626118158"),
  *     @OA\Property(property="position", type="string", example="Developer"),
+ *
+ *     @OA\Property(
+ *         property="projects",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/Project")
+ *     ),
+ *
  *     @OA\Property(property="created_at", type="string", format="date-time"),
  *     @OA\Property(property="updated_at", type="string", format="date-time")
  * )
-*/
+ */
+
 
 class Employee extends Model
 {
